--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
  	<!-- Start Home One -->
 
 	
-<div class="home" id="sitemhome" style="background: url('/img/hero/headerimage2.jpg') no-repeat; background-size: cover;">
+<div class="home" id="sitemhome" style="background: url('/img/hero/headerimage7.jpg') no-repeat; background-size: cover;">
 	<div class="home-content">
 		<div class="container-fluid">
 			<div class="t-ce">
 				<h1>폐목재처리</h1>
 				
 				
-				<p>대형폐기물에서 일반생활 가정폐기물처리 전문업체!</p>
+				<p>폐목재처리 전문 업체 깔끔한 처리 !</p>
 			</div>
 		</div>
 	</div>
