--- a/about.html
+++ b/about.html
@@ -108,9 +108,10 @@
                         		<p>
                         			
                         			
-															저희 폐목재처리에 방문해 주셔서 감사합니다.<br>
-                							폐기물처리 업무를 신속하고 정확하게 처리하여 비용 절감을 드리겠습니다.<br>
-                							폐목재처리은 15년 이상의 경험인력들로 구성되어 있으며 다양한 장비와 차량이 갖추어져 있습니다.
+															저희 상일환경에 방문해 주셔서 감사합니다.<br>
+                							폐기물처리 업무를 신속하고 정확하게 처리하여 비용 절감을 해드리겠습니다.<br>
+                							상일환경은 15년 이상의 경험인력들로 구성되어 있으며 다양한 장비와 차량이 갖추어져 있습니다.<br>
+                                            폐기물 처리 업무도 전문적으로 처리 하는 시대 입니다. 신뢰와 믿음을 바탕으로 확실하게 처리 하여 드리겠습니다.
                         		</p>
                         	</h3>
                         </center>
