--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         
 
     <title>폐목재처리</title>
-    <meta name="description" content="폐목재처리업체,서울,수원,나무목재폐기물,임목폐기물,폐목수거처리,나무목재수거">
-    <meta name="keywords" content="폐목재처리업체,서울,수원,나무목재폐기물,임목폐기물,폐목수거처리,나무목재수거">
+    <meta name="description" content="서울강남,수원,성남,안양,용인,화성,평택동탄나무목재폐기물수거,폐목수거처리안내">
+    <meta name="keywords" content="서울강남,수원,성남,안양,용인,화성,평택동탄나무목재폐기물수거,폐목수거처리안내">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://jawonjunk.qustmddus.com">
     <meta property="og:title" content="폐목재처리">
     <meta property="og:site_name" content="폐목재처리">
-    <meta property="og:description" content="폐목재처리업체,서울,수원,나무목재폐기물,임목폐기물,폐목수거처리,나무목재수거">
+    <meta property="og:description" content="서울강남,수원,성남,안양,용인,화성,평택동탄나무목재폐기물수거,폐목수거처리안내">
     <link rel="alternate" type="application/rss+xml" href="http://jawonjunk.qustmddus.com/feed.xml">
 
     <!-- Stylesheet -->
